Update website with professional layout
Bitex (BIT) is a utility token on the Polygon network for payments, trading, and easy integration into platforms.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TokenBitex</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TokenBitex (BIT)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        .logo {
+            width: 150px;
+            margin-bottom: 20px;
+        }
+        h1 {
+            color: #1a1a1a;
+        }
+        p {
+            font-size: 1.1em;
+            margin: 10px 0;
+        }
+        a {
+            color: #0077cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            display: inline-block;
+            max-width: 600px;
+        }
+    </style>
 </head>
 <body>
-    <h1>TokenBitex (BIT)</h1>
-    <p>Utility token on the Polygon network for payments and trading.</p>
-    <p>Contract: <a href="https://polygonscan.com/address/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0">0x4296dD83e49d01BB801172d8e938FafE6dcF86A0</a></p>
-    <p>Website: <a href="https://asaleh200014-beep.github.io/bitex">Official Page</a></p>
+    <div class="container">
+        <!-- لوگو SVG یا PNG -->
+        <img src="https://asaleh200014-beep.github.io/bitex-token-assets/bitex.svg" alt="TokenBitex Logo" class="logo">
+        <h1>TokenBitex (BIT)</h1>
+        <p>Utility token on the Polygon network for payments, trading on DEX/CEX, and easy integration into payment platforms.</p>
+        <p>Contract: <a href="https://polygonscan.com/address/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0" target="_blank">0x4296dD83e49d01BB801172d8e938FafE6dcF86A0</a></p>
+        <p>Website: <a href="https://tokenbitex.github.io/tokenbitex/" target="_blank">Official Page</a></p>
+    </div>
 </body>
 </html>
