Update token logo
Replaced the old token logo with a new 256x256 image for better visibility and consistency across devices. 
Updated the <img> tag in index.html and adjusted CSS to maintain proper aspect ratio.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             padding: 50px;
         }
         .logo {
-            width: 150px;
+            width: 256px; /* اندازه تصویر جدید */
+            height: auto;  /* ارتفاع به نسبت عرض تنظیم شود */
             margin-bottom: 20px;
         }
         h1 {
@@ -42,8 +43,8 @@
 </head>
 <body>
     <div class="container">
-        <!-- لوگو SVG یا PNG -->
-        <img src="https://asaleh200014-beep.github.io/bitex-token-assets/bitex.svg" alt="TokenBitex Logo" class="logo">
+        <!-- لوگوی جدید 256x256 -->
+        <img src="logo256.png" alt="TokenBitex Logo" class="logo">
         <h1>TokenBitex (BIT)</h1>
         <p>Utility token on the Polygon network for payments, trading on DEX/CEX, and easy integration into payment platforms.</p>
         <p>Contract: <a href="https://polygonscan.com/address/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0" target="_blank">0x4296dD83e49d01BB801172d8e938FafE6dcF86A0</a></p>
