--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TokenBitex (BIT)</title>
+
+    <!-- SEO -->
+    <meta name="description" content="TokenBitex (BIT) is a utility token on the Polygon network for payments, trading, and integration into payment platforms.">
+
+    <!-- Favicon / Token icon -->
+    <link rel="icon" type="image/svg+xml" href="bitex32.svg">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,8 +20,8 @@
             padding: 50px;
         }
         .logo {
-            width: 256px; /* اندازه تصویر جدید */
-            height: auto;  /* ارتفاع به نسبت عرض تنظیم شود */
+            width: 256px;
+            height: auto;
             margin-bottom: 20px;
         }
         h1 {
@@ -43,12 +50,34 @@
 </head>
 <body>
     <div class="container">
-        <!-- لوگوی جدید 256x256 -->
-        <img src="logo256.png" alt="TokenBitex Logo" class="logo">
+
+        <!-- Logo 256x256 (PNG) -->
+        <img src="bitex256.png"
+             alt="TokenBitex Logo"
+             class="logo"
+             onerror="this.onerror=null; this.src='bitex32.svg';">
+
         <h1>TokenBitex (BIT)</h1>
-        <p>Utility token on the Polygon network for payments, trading on DEX/CEX, and easy integration into payment platforms.</p>
-        <p>Contract: <a href="https://polygonscan.com/address/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0" target="_blank">0x4296dD83e49d01BB801172d8e938FafE6dcF86A0</a></p>
-        <p>Website: <a href="https://tokenbitex.github.io/tokenbitex/" target="_blank">Official Page</a></p>
+
+        <p>
+            Utility token on the Polygon network for payments, trading on DEX/CEX,
+            and easy integration into payment platforms.
+        </p>
+
+        <p>
+            <strong>Contract:</strong><br>
+            <a href="https://polygonscan.com/address/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0" target="_blank">
+                0x4296dD83e49d01BB801172d8e938FafE6dcF86A0
+            </a>
+        </p>
+
+        <p>
+            <strong>Website:</strong><br>
+            <a href="https://tokenbitex.github.io/tokenbitex/" target="_blank">
+                https://tokenbitex.github.io/tokenbitex/
+            </a>
+        </p>
+
     </div>
 </body>
 </html>
