--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TokenBitex (BIT)</title>
+    <title>Bitex (BIT)</title>
 
     <!-- SEO -->
-    <meta name="description" content="TokenBitex (BIT) is a utility token on the Polygon network for payments, trading, and integration into payment platforms.">
+    <meta name="description" content="Bitex (BIT) is a utility token on the Polygon network for payments, trading, and integration into payment platforms.">
 
-    <!-- Favicon / Token icon -->
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="bitex32.svg">
 
     <style>
@@ -51,13 +51,12 @@
 <body>
     <div class="container">
 
-        <!-- Logo 256x256 (PNG) -->
         <img src="bitex256.png"
-             alt="TokenBitex Logo"
+             alt="Bitex Logo"
              class="logo"
              onerror="this.onerror=null; this.src='bitex32.svg';">
 
-        <h1>TokenBitex (BIT)</h1>
+        <h1>Bitex (BIT)</h1>
 
         <p>
             Utility token on the Polygon network for payments, trading on DEX/CEX,
@@ -72,9 +71,16 @@
         </p>
 
         <p>
-            <strong>Website:</strong><br>
-            <a href="https://tokenbitex.github.io/tokenbitex/" target="_blank">
-                https://tokenbitex.github.io/tokenbitex/
+            <strong>Official Website:</strong><br>
+            <a href="https://tokenbitex.org" target="_blank">
+                https://tokenbitex.org
+            </a>
+        </p>
+
+        <p>
+            <strong>Contact:</strong><br>
+            <a href="mailto:contact@tokenbitex.org">
+                contact@tokenbitex.org
             </a>
         </p>
 
