--- a/index.html
+++ b/index.html
@@ -4,112 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BITEX (BIT) — Utility Token on Polygon</title>
-  <style>
-    body {font-family: Arial, sans-serif; margin: 30px; line-height:1.6; background:#ffffff; color:#222;}
-    h1,h2 {color:#111;}
-    section {margin-bottom:40px;}
-    ul {list-style:none; padding:0;}
-    li {margin:6px 0;}
-    a {color:#1a73e8; text-decoration:none;}
-    a:hover {text-decoration:underline;}
-    .box {border:1px solid #ddd; padding:15px; border-radius:8px;}
-  </style>
+  <meta name="description" content="BITEX (BIT) is an ERC-20 utility token on Polygon for payments, DeFi and trading.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-<section class="box">
+<header>
   <h1>BITEX (BIT)</h1>
-  <p>
-    BITEX is an ERC-20 utility token deployed on the Polygon PoS network. 
-    It is designed for fast, low-cost transactions, digital payments, DeFi applications, 
-    and trading on decentralized and centralized exchanges (DEX/CEX). 
-    BITEX aims to provide a simple and efficient blockchain-based financial tool 
-    for everyday crypto users and online payment integrations.
-  </p>
-  <p>
-    Contract Address: 
+  <p>Utility Token on Polygon Network</p>
+</header>
+
+<nav>
+  <a href="#about">About</a>
+  <a href="#tokenomics">Tokenomics</a>
+  <a href="#team">Team</a>
+  <a href="#contact">Contact</a>
+  <a href="assets/docs/Whitepaper.pdf" target="_blank">Whitepaper</a>
+</nav>
+
+<!-- Sections -->
+<section id="about">
+  <iframe src="sections/about.html" style="width:100%; border:none; min-height:150px;"></iframe>
+</section>
+
+<section id="tokenomics">
+  <iframe src="sections/tokenomics.html" style="width:100%; border:none; min-height:150px;"></iframe>
+</section>
+
+<section id="team">
+  <iframe src="sections/team.html" style="width:100%; border:none; min-height:150px;"></iframe>
+</section>
+
+<section id="contact">
+  <iframe src="sections/contact.html" style="width:100%; border:none; min-height:150px;"></iframe>
+</section>
+
+<section id="logo">
+  <h2>Token Logo</h2>
+  <p>SVG 32×32:</p>
+  <img src="assets/img/bitex32.svg" alt="BITEX Logo" width="32" height="32">
+  <p>PNG 256×256:</p>
+  <img src="assets/img/bitex256.png" alt="BITEX Logo" width="128">
+</section>
+
+<footer>
+  <p>Contract Address:
     <a href="https://polygonscan.com/token/0x4296dD83e49d01BB801172d8e938FafE6dcF86A0" target="_blank">
       0x4296dD83e49d01BB801172d8e938FafE6dcF86A0
     </a>
   </p>
-</section>
-
-<section class="box" id="about">
-  <h2>About BITEX</h2>
-  <p>
-    BITEX is a blockchain-based project focused on providing a practical utility token 
-    for payment solutions, DeFi services, and digital asset transactions. 
-    By operating on Polygon, BITEX benefits from high transaction speed and minimal fees. 
-    The project is community-driven and aims to expand real-world crypto payment adoption.
-  </p>
-</section>
-
-<section class="box" id="tokenomics">
-  <h2>Tokenomics</h2>
-  <ul>
-    <li><strong>Name:</strong> BITEX</li>
-    <li><strong>Symbol:</strong> BIT</li>
-    <li><strong>Network:</strong> Polygon PoS</li>
-    <li><strong>Standard:</strong> ERC-20</li>
-    <li><strong>Contract:</strong> 0x4296dD83e49d01BB801172d8e938FafE6dcF86A0</li>
-    <li><strong>Primary Use:</strong> Payments, DeFi, Trading, Utility Token</li>
-  </ul>
-</section>
-
-<section class="box" id="team">
-  <h2>Project Team</h2>
-  <p>
-    The BITEX project is developed and maintained by blockchain developers and crypto enthusiasts. 
-    Professional team profile:
-  </p>
-  <ul>
-    <li>
-      LinkedIn: 
-      <a href="https://www.linkedin.com/in/token-bitex-832a5b3a1" target="_blank">
-        https://www.linkedin.com/in/token-bitex-832a5b3a1
-      </a>
-    </li>
-  </ul>
-</section>
-
-<section class="box" id="whitepaper">
-  <h2>Whitepaper</h2>
-  <p>
-    Read the official BITEX whitepaper for full technical and project details:
-  </p>
-  <a href="https://github.com/tokenbitex/tokenbitex/blob/main/Whitepaper.pdf" target="_blank">
-    Download BITEX Whitepaper (PDF)
-  </a>
-</section>
-
-<section class="box" id="social">
-  <h2>Official Channels</h2>
-  <ul>
-    <li>Website: <a href="https://tokenbitex.github.io/tokenbitex/" target="_blank">https://tokenbitex.github.io/tokenbitex/</a></li>
-    <li>Telegram: <a href="https://t.me/TokenBitexOfficial" target="_blank">https://t.me/TokenBitexOfficial</a></li>
-    <li>Twitter (X): <a href="https://twitter.com/tokenbitex" target="_blank">https://twitter.com/tokenbitex</a></li>
-    <li>Medium: <a href="https://medium.com/@tokenbitex" target="_blank">https://medium.com/@tokenbitex</a></li>
-    <li>Reddit: <a href="https://www.reddit.com/user/StockSolution4448/" target="_blank">Reddit Profile</a></li>
-    <li>Discord: <a href="https://discord.gg/35xnXKawk" target="_blank">Discord Server</a></li>
-    <li>Facebook: <a href="https://www.facebook.com/tokenbitex" target="_blank">Facebook Page</a></li>
-    <li>Slack: <a href="https://app.slack.com/client/T0A6TTYJSBA/C0A6TUV2DQ8" target="_blank">Slack Workspace</a></li>
-    <li>Bitcointalk: <a href="https://bitcointalk.org/index.php?topic=5570074.new#new" target="_blank">Project Discussion</a></li>
-    <li>OpenSea: <a href="https://opensea.io/0x3012fa7309078005b8998909c2e06fa267d4d38f" target="_blank">NFT Page</a></li>
-    <li>GitHub: <a href="https://github.com/tokenbitex/tokenbitex" target="_blank">Source Repository</a></li>
-  </ul>
-</section>
-
-<section class="box" id="logo">
-  <h2>Token Logo</h2>
-  <p>SVG 32×32:</p>
-  <a href="https://raw.githubusercontent.com/tokenbitex/tokenbitex/main/bitex32.svg" target="_blank">
-    bitex32.svg
-  </a>
-  <p>PNG 256×256:</p>
-  <a href="https://raw.githubusercontent.com/tokenbitex/tokenbitex/main/bitex256.png" target="_blank">
-    bitex256.png
-  </a>
-</section>
+  <p>© 2026 BITEX — All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
